tests/relay_integration_esmodules/relay_integration_esmodules.exp
Error ----------------------------------------------------------------------------------------------------- test.js:11:1

Cannot cast `fragment` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:11:1
   11| fragment as empty; // ERROR
       ^^^^^^^^

References:
   MyFragment.graphql.js:1:16
    1| export default 1;
                      ^ [1]
   test.js:11:13
   11| fragment as empty; // ERROR
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:1

Cannot cast `query` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:21:1
   21| query as empty; // ERROR
       ^^^^^

References:
   MyQuery.graphql.js:1:16
    1| export default 2;
                      ^ [1]
   test.js:21:10
   21| query as empty; // ERROR
                ^^^^^ [2]



Found 2 errors
